Better scrollbar and fixed SimulaTV EP 5 thumbnail

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   font-family: "Montserrat", Helvetica, sans-serif;
   height: 100vh;
   scroll-padding-top: 3rem;
+  overflow: overlay;
 }
 
 * {
@@ -39,6 +40,19 @@ footer {
     url("/assets/fonts/brant/brant-bold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+}
+
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  border-radius: 15px;
+  width: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 0, 0, 0.5);
+  border-radius: 100px;
+  border: 6px solid transparent;
+  background-clip: content-box;
 }
 
 /* RESPONSIVENESS */
